...
                            </label>
                            <button opaque="NO" alpha="0.75" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" reversesTitleShadowWhenHighlighted="YES" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W3t-A5-cYs">
                                <rect key="frame" x="46" y="357" width="283" height="46"/>
                                <color key="backgroundColor" red="0.34153662863595524" green="0.90070762434554974" blue="0.39742463088761315" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                <color key="tintColor" red="0.043030104710000003" green="0.043030104710000003" blue="0.043030104710000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <state key="normal" title="Easy">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                    <color key="titleShadowColor" red="0.95615493549873043" green="0.8564933608659614" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <segue destination="LcD-t4-zND" kind="modal" identifier="easySeg" id="UOa-iF-HHc"/>
                                </connections>
...
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8xu-FM-K6g">
                                <rect key="frame" x="7" y="20" width="44" height="33"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <state key="normal" title="Close">
                                    <color key="titleColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                </state>
                                <connections>
                                    <action selector="closeBtn:" destination="LcD-t4-zND" eventType="touchUpInside" id="OCt-17-Sjq"/>
                                </connections>
                            </button>
...
